<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--FALTA AQUI QUITAR NO USADOS EN LA VERSION FINAL-->
    <!--General-->
    <string name="app_name">Reecicla! - GAME</string>

    <!--Login screen-->
    <string name="userEmail">E-mail</string>
    <string name="userPassword">Password</string>
    <string name="userEmail_missing">Please introduce a valid e-mail.</string>
    <string name="userPassword_missing">Please introduce a valid password.</string>
    <string name="loginButton">Log in</string>
    <string name="forgotPassword">Did you forgot your password?</string>
    <string name="googleLogin">Log in with Google</string>
    <string name="facebookLogin">Log in with Facebook</string>
    <string name="login_success">Login Successful.</string>
    <string name="login_failed">Login Failed.</string>
    <string name="logingoogle_success">Google Login Successful.</string>
    <string name="logingoogle_failed">Google Login Failed.</string>
    <string name="logout_success">Logout Successful.</string>
    <string name="logout_failed">Logout Failed.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password2">Enter the email address of the account for which you want to reset the password.</string>
    <string name="reset_successful">Reset password link has been sent to your requested email.</string>
    <string name="reset_failed">Reset password link has failed.</string>
    <string name="toggle_pass">Toggle between displaying the password as visible or invisible.</string>

    <!--Global elements-->
    <string name="logoDescription">GreenCarson Foundation Logotype</string>
    <string name="start_game_button">Start Game</string>
    <string name="go_back_button">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="help_button">Help</string>
    <string name="background">Background picture</string>

    <!--Level selection screen-->
    <string name="basicLevel">Basic</string>
    <string name="interLevel">Intermediate</string>
    <string name="advancedLevel">Advanced</string>
    <string name="nightmareLevel">Nightmare</string>
    <string name="padlock">Padlock</string>

    <string name="bas_levelSel">Basic Level Selection</string>
    <string name="inter_levelSel">Intermediate Level Selection</string>
    <string name="adv_levelSel">Advanced Level Selection</string>
    <string name="nightmare_levelSel">Nightmare Level Selection</string>

    <string name="dialog_selectLevel1">How to play?</string>
    <string name="dialog_selectLevel2">Waste falls from the sky! You must drag them to the correct bin to avoid contamination.\n \n Depending on the level you chose, it will be more difficult to differentiate between the types of waste.</string>
    <string name="dialog_selectLevel3">Learn, have fun and reecicla!</string>
    <string name="dialog_selectLevel4">Learn, have fun and</string>

    <string name="dialog_warningQuit">Do you want to\nexit the app?</string>
    <string name="dialog_warningExit">Do you want \nto logout?</string>
    <string name="dialog_warningAlert">You haven\'t chosen\na level yet!</string>
    <string name="dialog_warningLeave">Do you want to\nleave the game?</string>
    <string name="dialog_quit">Quit</string>
    <string name="dialog_leave">Exit</string>
    <string name="dialog_logout">Sign out</string>
    <string name="achievements">Achievements</string>

    <!--Tutorial description-->
    <string name="tutorial_buttonSel">Play</string>
    <string name="tutorial_instruction">Touch the trash cans\nto learn more</string>
    <string name="trashCan1">Green trash can</string>
    <string name="trashCan2">Blue trash can</string>
    <string name="trashCan3">Red trash can</string>
    <string name="trashCan4">Gray trash can</string>

    <string name="trashCan1_help">Learn more about the green trash can</string>
    <string name="trashCan2_help">Learn more about the blue can</string>
    <string name="trashCan3_help">Learn more about the gray trash can</string>
    <string name="trashCan4_help">Learn more about the red trash can</string>

    <string name="dialog_trashcan11">Recoverable waste</string>
    <string name="dialog_trashcan12">All those waste materials that can be reused and do not decompose easily.</string>
    <string name="dialog_trashcan21">Organic waste</string>
    <string name="dialog_trashcan22">All those waste materials that are biodegradable remains of plants and animals.</string>
    <string name="dialog_trashcan31">Inorganic waste</string>
    <string name="dialog_trashcan32">All those waste materials that are not natural but can be recycled.</string>
    <string name="dialog_trashcan41">Special handling waste</string>
    <string name="dialog_trashcan42">All those waste materials that can no longer be reused and must be disposed of with caution.</string>

<!--
    <string name="dialog_trashcan11">Recoverable waste</string>
    <string name="dialog_trashcan12">All those waste materials that can be reused and do not decompose easily.\n\n<b>Like:</b>\n\nCardboard\nPaper\nPET\nHDPE\nGlass\nMetals\nAppliances</string>
    <string name="dialog_trashcan21">Organic waste</string>
    <string name="dialog_trashcan22">All those waste materials that are biodegradable remains of plants and animals.\n\n<b>Like:</b>\n\nPlants\nBones\nPeels\nExcrements\nBranches or leaves\nFood waste\nDirty paper or cardboard</string>
    <string name="dialog_trashcan31">Inorganic waste</string>
    <string name="dialog_trashcan32">All those waste materials that are not natural but can be recycled.\n\n<b>Like:</b>\n\nPaper\nCardboard\nGlass\nMetals\nClothes\nLeather\nCans</string>
    <string name="dialog_trashcan41">Special handling waste</string>
    <string name="dialog_trashcan42">All those waste materials that can no longer be reused and must be disposed of with caution.\n\n<b>Like:</b>\n\nToxic waste\nMedical waste\nIndustrial waste\nHazardous waste\nConstruction waste</string>
-->

    <!--Trash-->
    <!--Valorizable waste-->
    <string name="trash_a1">Paper</string>
    <string name="trash_a2">Cardboard</string>
    <string name="trash_a3">Glass</string>
    <string name="trash_a4">LDPE</string>
    <string name="trash_a5">Aluminum</string>
    <string name="trash_a6">PET</string>
    <string name="trash_a7">Tin</string>
    <string name="trash_a8">Steel</string>
    <string name="trash_a9">Tetra Pak</string>

    <!--Organic waste-->
    <string name="trash_b1">Eggshell</string>
    <string name="trash_b2">Fruit peel</string>
    <string name="trash_b3">Oil</string>
    <string name="trash_b4">Wool</string>
    <string name="trash_b5">Wood</string>
    <string name="trash_b6">Wax</string>
    <string name="trash_b7">Clothes</string>
    <string name="trash_b8">Leather</string>
    <string name="trash_b9">Branches</string>

    <!--Inorganic waste-->
    <string name="trash_c1">Rubber</string>
    <string name="trash_c2">Cement</string>
    <string name="trash_c3">PVC</string>
    <string name="trash_c4">Nylon</string>
    <string name="trash_c5">Stones</string>
    <string name="trash_c6">Ceramic</string>
    <string name="trash_c7">Resin</string>
    <string name="trash_c8">Porcelain</string>
    <string name="trash_c9">Concrete</string>

    <!--Hazardous waste-->
    <string name="trash_d1">Corrosives</string>
    <string name="trash_d2">Electronics</string>
    <string name="trash_d3">Home appliances</string>
    <string name="trash_d4">Biological hazards</string>
    <string name="trash_d5">Cleaning</string>
    <string name="trash_d6">Flammable</string>
<!--    <string name="trash_d6">Placeholder</string>
        <string name="trash_d7">Placeholder</string>
        <string name="trash_d8">Placeholder</string>
        <string name="trash_d9">Placeholder</string>-->

    <!--Game-->
    <string name="your_points">Your score: </string>
    <string name="highest_score">Highest score: </string>
    <string name="dialog_restart">Restart level</string>

    <string name="winning_dialog">You cleaned\nthe world!</string>
    <string name="losing_dialog">The world got polluted!</string>
    <string name="winning_picture">Healthy planet</string>
    <string name="losing_picture">Sick planet</string>

    <string name="winning_tip1">Did you know that only 9\% of waste is recycled in Mexico?</string>
    <string name="winning_tip2">Did you know that 500,000 bottles are produced per minute? Most of them end up in the ocean.</string>
    <string name="winning_tip3">Did you know that everyday plastic can take over 450 years to degrade?</string>
    <string name="winning_tip4">Did you know that in Mexico, over 50\% of PET plastic is recycled?</string>
    <string name="winning_tip5">Did you know that recycling has increased by approximately 200\% in the last 10 years?</string>
    <string name="winning_tip6">Did you know that in Mexico, recycled tires are used for floors and furniture?</string>
    <string name="winning_tip7">Did you know that in Mexico, the General Law for Waste Prevention exists?</string>
    <string name="winning_tip8">Did you know that glass can take up to 5000 years to decompose?</string>
    <string name="winning_tip9">Did you know that producing a recycled can reduces 95\% of materials?</string>
    <string name="winning_tip10">Did you know that one million marine creatures die each year due to waste?</string>

    <string name="losing_tip">However, it\'s never too late to change the real world. Would you like to try again?</string>
    <string name="dialog_go">Let\'s go!</string>
    <string name="space">" "</string>
    <string name="trophy">Trophy</string>

    <string name="points_placeholder">%1$d</string>
    <string name="highest_placeholder">%1$d</string>

    <!--Ranking-->
    <string name="points_ranking">" pts"</string>
    <string name="ranking_ranking">Rank</string>
    <string name="number_ranking">0</string>
    <string name="ranking_null_name">----------</string>
    <string name="ranking_null_number">----</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>

    <string name="default_web_client_id" translatable="false">901697229886-hhlg1ttba01pkmicerijb5hn5chgkp91.apps.googleusercontent.com</string>
    <string name="user_not_found">No se encuentra un usuario de Google. Por favor, registrate primero en la aplicación de Green Carson.</string>

</resources>