<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLevelActivity">



    <!--Fondo de aplicación-->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_tiles"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <!--Botón de Regresar-->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/logo_back"
        android:contentDescription="@string/go_back_button"
        android:onClick="dialogWarningExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Botón de Ayuda-->
    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/logo_help"
        android:contentDescription="@string/help_button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="dialogSelectLevel"/>

    <!--Logo Reecicla GAME-->
    <!--984 × 559px-->
    <ImageView
        android:id="@+id/logoGame"
        android:layout_width="246dp"
        android:layout_height="139dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_game" />

    <!--Falta verificar el diseño para que la distancia entre los botones
    sea correcta. Puede que se deba cambiar el diseño de los botones.-->

    <!--Botones de niveles-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBasic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/gradient_button"
        android:contentDescription="@string/bas_levelSel"
        android:onClick="selectLevel"
        android:text="@string/basicLevel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoGame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonInter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button2"
        android:contentDescription="@string/inter_levelSel"
        android:onClick="selectLevel"
        android:text="@string/interLevel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBasic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdvan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button"
        android:contentDescription="@string/adv_levelSel"
        android:onClick="selectLevel"
        android:text="@string/advancedLevel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNightmare"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button2"
        android:contentDescription="@string/nightmare_levelSel"
        android:onClick="selectLevel"
        android:text="@string/nightmareLevel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdvan" />

    <!--Botón de Empezar-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCorner"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:background="@drawable/logo_corner"
        android:contentDescription="@string/start_game_button"
        android:onClick="startTutorial"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintOverlap" />

</androidx.constraintlayout.widget.ConstraintLayout>