<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tilesparent"
    tools:context=".TutorialActivity">

    <!--Botón de Regresar-->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/logo_back"
        android:contentDescription="@string/go_back_button"
        android:onClick="goToSelectScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Botón de Ayuda-->
    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/logo_help"
        android:contentDescription="@string/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Logo Reecicla GAME-->
    <!--984 × 559px-->
    <ImageView
        android:id="@+id/logoGame"
        android:layout_width="246dp"
        android:layout_height="139dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_game" />

    <!--Botón de tutorial-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTutorial"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient_button"
        android:contentDescription="@string/bas_levelSel"
        android:onClick="playLevel_basic"
        android:text="@string/tutorial_buttonSel"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoGame" />

    <TextView
        android:id="@+id/tutorialInstruction"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tutorial_instruction"
        android:textAlignment="center"
        android:textColor="@color/turquoiseText"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTutorial" />

    <!--Texto de instrucción-->


    <!--Dibujado de botes-->
</androidx.constraintlayout.widget.ConstraintLayout>