<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinningActivity">

    <!--Fondo de aplicación-->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_tiles"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <!--Imágen de decoración-->
    <ImageView
        android:id="@+id/imageDecoration"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginBottom="-150dp"
        android:contentDescription="@string/winning_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/decoration_winning" />

    <!--Botón de Siguiente-->
    <Button
        android:id="@+id/levelName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/logo_foward"
        android:contentDescription="@string/help_button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Nivel-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLevel"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/gradient_winning1"
        android:text="@string/basicLevel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView" />

    <!--Tip-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stateDescription"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient_winning2"
        android:text="@string/winning_tip1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLevel" />

</androidx.constraintlayout.widget.ConstraintLayout>