<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialActivity">

    <!--Fondo de aplicación-->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_tiles"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background" />

    <!--Guías verticales-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonLeft_Start"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonLeft_End"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalCenter"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonRight_Start"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.81" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonRight_End"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <!--Guías horizontales-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButton_Top"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButton_Bottom"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineGAME_Top"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineGAME_Bottom"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <!--Botón de Regresar-->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/logo_back"
        android:contentDescription="@string/go_back_button"
        android:onClick="goToSelectScreen"
        app:backgroundTint="@null"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButton_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineButtonLeft_End"
        app:layout_constraintStart_toStartOf="@+id/guidelineButtonLeft_Start"
        app:layout_constraintTop_toTopOf="@+id/guidelineButton_Top" />

    <!--Botón de Ayuda-->
    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/logo_help"
        android:contentDescription="@string/help_button"
        android:onClick="dialogSelectLevel"
        app:backgroundTint="@null"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButton_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineButtonRight_End"
        app:layout_constraintStart_toStartOf="@+id/guidelineButtonRight_Start"
        app:layout_constraintTop_toTopOf="@+id/guidelineButton_Top" />

    <!--Logo Reecicla GAME-->
    <!--984 × 559px-->
    <ImageView
        android:id="@+id/logoGame"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintBottom_toTopOf="@+id/guidelineGAME_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalCenter"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalCenter"
        app:layout_constraintTop_toTopOf="@+id/guidelineGAME_Top"
        app:srcCompat="@drawable/logo_game" />

    <!--Botón de tutorial-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLevel"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/gradient_button3"
        android:contentDescription="@string/bas_levelSel"
        android:onClick="playLevel"
        android:text="@string/tutorial_buttonSel"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoGame" />

    <!--Texto de instrucción-->
    <TextView
        android:id="@+id/tutorialInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="22dp"
        android:text="@string/tutorial_instruction"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineButtonRight_Start"
        app:layout_constraintStart_toStartOf="@+id/guidelineButtonLeft_End"
        app:layout_constraintTop_toBottomOf="@+id/buttonLevel" />

    <!--Botes de basura-->

    <ImageView
        android:id="@+id/trashCan1"
        android:layout_width="140dp"
        android:layout_height="220dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/trashCan1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trashcan_1"
        tools:ignore="VisualLintBounds"
        android:onClick="dialog_trashcans" />

    <ImageView
        android:id="@+id/trashCan2"
        android:layout_width="140dp"
        android:layout_height="220dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/trashCan2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trashcan_2"
        tools:ignore="VisualLintBounds"
        android:onClick="dialog_trashcans" />

    <ImageView
        android:id="@+id/trashCan3"
        android:layout_width="140dp"
        android:layout_height="220dp"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/trashCan3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/trashcan_3"
        tools:ignore="VisualLintBounds"
        android:onClick="dialog_trashcans" />

    <ImageView
        android:id="@+id/trashCan1_help"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/trashCan1_help"
        app:layout_constraintBottom_toTopOf="@+id/trashCan1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_help"
        android:onClick="dialog_trashcans" />

    <ImageView
        android:id="@+id/trashCan2_help"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/trashCan2_help"
        app:layout_constraintBottom_toTopOf="@id/trashCan2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_help"
        android:onClick="dialog_trashcans" />

    <ImageView
        android:id="@+id/trashCan3_help"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/trashCan3_help"
        app:layout_constraintBottom_toTopOf="@id/trashCan3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_help"
        android:onClick="dialog_trashcans" />

</androidx.constraintlayout.widget.ConstraintLayout>