<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tilesparent"
    tools:context=".RegisterActivity">

    <!--Logo Reecicla GAME-->
    <!--984 × 559px-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="139dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/logoDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_reecicla"
        tools:src="@tools:sample/avatars" />

    <!--Botones de niveles-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBasic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/gradient_button"
        android:stateListAnimator="@null"
        android:text="@string/basicLevel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonInter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button2"
        android:stateListAnimator="@null"
        android:text="@string/interLevel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBasic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdvanced"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_button"
        android:stateListAnimator="@null"
        android:text="@string/advancedLevel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInter" />

</androidx.constraintlayout.widget.ConstraintLayout>